--- a/PeraKasa/app/src/main/AndroidManifest.xml
+++ b/PeraKasa/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainMenuActivity"></activity>
+        <activity android:name=".OdemeYontemiSecActivity"></activity>
+        <activity android:name=".MainMenuActivity" />
         <activity android:name=".SatisDokum" />
         <activity android:name=".MainActivity">
             <intent-filter>
